maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:64: error: ':' expected but ',' found.
def noterInd(i,j) = {
              ^JediEscaper:82: error: identifier expected but '}' found.
}
^