maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var xb = 0
  var yb = 0
  var xm = getMondeLargeur()
  var ym = getMondeHauteur()
  for (i <- 0 to xm-1) {
    for (j <- 0 to ym-1) {
      if (aBiscuit(i,j)) {
        xb = i
        yb = j
      }
    }
  }
  setIndication(xb,yb,0)
  for (c <- 1 to xm*ym) {
    for (i <- 0 to xm-1) {
      for (j <- 0 to ym-1) {
        if (getIndication(i,j)!=9999) {
          var ind = getIndication(i,j)
          if (!aMurNord(i,j) && (getIndication(i,j-1)==9999)) {
            setIndication(i,j-1,ind+1)}
          else if (!aMurOuest(i,j) && (getIndication(i-1,j)==9999)) {
            setIndication(i-1,j,ind+1)}
          else if ((j+1<ym) && !aMurNord(i,j+1) && (getIndication(i,j+1)==9999)) {
            setIndication(i,j+1,ind+1)}
          else if ((i+1<xm) && !aMurOuest(i+1,j) && (getIndication(i+1,j)==9999)) {
            setIndication(i+1,j,ind+1)}
        }
      }
    }
  }
  var dir = Direction.NORTH
  while (!estSurBiscuit()) {
    dir = chercheDir()
    setDirection(dir)
    avance()
  }
  prendBiscuit()
}

def chercheDir():Direction = {
  var xm = getMondeLargeur()
  var ym = getMondeHauteur()
  var min = 9999
  var dir = Direction.NORTH
  var i = getX()
  var j = getY()
  if (!aMurNord(i,j) && (getIndication(i,j-1)<min)) {
     	min = getIndication(i,j-1)
  		dir = Direction.NORTH}
  if (!aMurOuest(i,j) && (getIndication(i-1,j)<min)) {
     	min = getIndication(i-1,j)
     	dir = Direction.WEST}
  if ((j+1<ym) && !aMurNord(i,j+1) && (getIndication(i,j+1)<min)) {
     	min = getIndication(i,j+1)
  		dir = Direction.SOUTH}
  if ((i+1<xm) && !aMurOuest(i+1,j) && (getIndication(i+1,j)<min)) {
    	min = getIndication(i+1,j)
      dir = Direction.EAST}
  return dir
}

def noterInd(i,j) = {
  var min = 9999
  if (!aMurNord(i,j) && (getIndication(i,j-1)<min)) {
    min = getIndication(i,j-1)}
  if (!aMurOuest(i,j) && (getIndication(i-1,j)<min)) {
    min = getIndication(i-1,j)}
  if ((j+1<ym) && !aMurNord(i,j+1) && (getIndication(i,j+1)<min)) {
    min = getIndication(i,j+1)}
  if ((i+1<xm) && !aMurOuest(i+1,j) && (getIndication(i+1,j)<min)) {
    min = getIndication(i+1,j)}
  setIndication(i,j,min)
}